# physical-atari-rlc

./: README.md
3d_model_files/3d_printer_files/devbox/: Back.stl
3d_model_files/3d_printer_files/robotroller/: cx40_cover.stl  fire_finger_holder.stl  motor_attachment.stl  shoulder.stl  shoulder_joint.stl  shoulder_socket_cover.stl  tl_corner.stl  tr_corner.stl  washer.stl
3d_model_files/devbox/: Front.stl
3d_model_files/other_formats/: devbox.mtl  robotroller.mtl
3d_model_files/robotroller/: base_plate.stl  bl_corner.stl  br_corner.stl  elbow_cover.stl  elbow_to_finger.stl  fire_finger.stl  joystick_attachment.stl  joystick_attachment_cover.stl
agent_code/: README.md  checkpoint_store.py  evaluate_policy.py  finetune_policy.py  learn_policy.py  requirements.txt
agent_code/agents/: agent_action_input.py  agent_random.py
agent_code/experiment_configs/: agent_action_input_real.json  agent_action_input_sim.json  agent_random_real.json  agent_random_sim.json  real.json
agent_code/physical_atari_configs/: robotroller.default.json
agent_code/real_env/: __init__.py  real_env.py
agent_code/scripts/: README.md  camera_focus_sweep.py  visualize_stream.py
agent_code/sim_env/: __init__.py  robotroller_model_weights.npz  sim_env.py
agent_code/useful_scripts/: VIDEO_RECORDING_README.md  change_position.py  create_video_wall.py  focus.py  record_all_games.sh  visualize_stream.py
devbox_code/: CMakeLists.txt  README.md  main.cpp
devbox_code/imgui/: imgui_impl_sdl2.cpp  imgui_theme.cpp  imgui_theme.h
devbox_code/src/: CMakeLists.txt
devbox_code/src/atari/: CMakeLists.txt
devbox_code/src/atari/common/: ColourPalette.hpp  DynamicLoad.hpp  Log.hpp  Palettes.hpp  SDL2.hpp  ScreenExporter.hpp  ScreenSDL.hpp  SoundExporter.hpp  SoundNull.hxx  SoundSDL.hxx
devbox_code/src/atari/emucore/: Cart.hxx  Cart2K.hxx  Cart3E.hxx  Cart3F.hxx  Cart4A50.hxx  Cart4K.hxx  Control.hxx  DefProps.hxx  Deserializer.hxx  Device.hxx  Event.hxx  Joystick.hxx  M6502.hxx  M6502Hi.hxx  M6502Low.hxx  M6532.hxx  MD5.hxx  MediaSrc.hxx  NullDev.hxx  OSystem.hxx  Paddles.hxx  Props.hxx  PropsSet.cxx  PropsSet.hxx  Random.hxx  Screen.hxx  Serializer.hxx  Settings.hxx  Switches.hxx  System.hxx  TIA.hxx  TIASnd.hxx
devbox_code/src/atari/games/: CMakeLists.txt  RomSettings.cpp
devbox_code/src/atari/games/supported/: Pong.cpp
input_output_cpp_library/: CMakeLists.txt  README.md  bindings.cpp
input_output_cpp_library/include/: apriltag_detector.h  camera.h  physical_atari_env.h  robotroller.h  servo.h
input_output_cpp_library/src/: apriltag_detector.cpp  camera.cpp  physical_atari_env.cpp  robotroller.cpp  servo.cpp
setup_scripts/: change_baud_rate.py  change_id.py  requirements.txt
